correct header spacing

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,10 +2,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 16px;
+    padding-top: 32px;
 }
 
 nav {
     display: flex;
-    gap: 16px;
+    gap: 46px;
 }
